PMachine/src/PascalParser.java
// Generated from C:/Users/maxime/Desktop/MASTER1SEM2/CompilateurPascal/PMachine/src\Pascal.g4 by ANTLR 4.7.2

import java.util.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PascalParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, ID=40, WS=41, INT=42;
	public static final int
		RULE_program = 0, RULE_declarations = 1, RULE_declaration = 2, RULE_typi = 3, 
		RULE_instructions = 4, RULE_instruction = 5, RULE_simpleexpression = 6, 
		RULE_expression = 7, RULE_variable = 8, RULE_factor = 9, RULE_term = 10;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "declarations", "declaration", "typi", "instructions", "instruction", 
			"simpleexpression", "expression", "variable", "factor", "term"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'begin'", "'end.'", "';'", "'var'", "','", "':'", "'integer'", 
			"'array'", "'['", "']'", "'of'", "'boolean'", "'type'", "'end'", "'read'", 
			"'('", "')'", "'write'", "':='", "'if'", "'then'", "'else'", "'while'", 
			"'do'", "'for'", "'to'", "'downto'", "'-'", "'+'", "'='", "'<>'", "'<'", 
			"'>'", "'<='", "'>='", "'in'", "'*'", "'/'", "'div'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, "ID", "WS", "INT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Pascal.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	    private ArrayList<Instruction> pcode;
	    private TableSymboles table;
	    private Boolean pasderreur;


	    public  Instruction[] lire() throws Exception {
	        pcode = new ArrayList<Instruction>();
	        table = new TableSymboles();
	        program();
	        pasderreur = false;
	        return pcode.toArray(new Instruction[]{});
	    }

	public PascalParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public DeclarationsContext declarations() {
			return getRuleContext(DeclarationsContext.class,0);
		}
		public InstructionsContext instructions() {
			return getRuleContext(InstructionsContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PascalListener ) ((PascalListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PascalListener ) ((PascalListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(22);
			declarations();
			 pcode.add(new Instruction.INC(table.size));
			setState(24);
			match(T__0);
			setState(25);
			instructions();
			setState(26);
			match(T__1);

			        pcode.add(new Instruction.HLT());
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationsContext extends ParserRuleContext {
		public List<DeclarationContext> declaration() {
			return getRuleContexts(DeclarationContext.class);
		}
		public DeclarationContext declaration(int i) {
			return getRuleContext(DeclarationContext.class,i);
		}
		public DeclarationsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declarations; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PascalListener ) ((PascalListener)listener).enterDeclarations(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PascalListener ) ((PascalListener)listener).exitDeclarations(this);
		}
	}

	public final DeclarationsContext declarations() throws RecognitionException {
		DeclarationsContext _localctx = new DeclarationsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declarations);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(29);
			declaration();
			setState(34);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__2) {
				{
				{
				setState(30);
				match(T__2);
				setState(31);
				declaration();
				}
				}
				setState(36);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationContext extends ParserRuleContext {
		public Token ID;
		public TypiContext typi;
		public List<TerminalNode> ID() { return getTokens(PascalParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(PascalParser.ID, i);
		}
		public TypiContext typi() {
			return getRuleContext(TypiContext.class,0);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PascalListener ) ((PascalListener)listener).enterDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PascalListener ) ((PascalListener)listener).exitDeclaration(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(37);
			match(T__3);
			setState(38);
			((DeclarationContext)_localctx).ID = match(ID);

			        ArrayList<String> liste=new ArrayList<String>();
			        liste.add((((DeclarationContext)_localctx).ID!=null?((DeclarationContext)_localctx).ID.getText():null));
			    
			setState(45);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__4) {
				{
				{
				setState(40);
				match(T__4);
				setState(41);
				((DeclarationContext)_localctx).ID = match(ID);

				        liste.add((((DeclarationContext)_localctx).ID!=null?((DeclarationContext)_localctx).ID.getText():null));
				    
				}
				}
				setState(47);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(48);
			match(T__5);
			setState(49);
			((DeclarationContext)_localctx).typi = typi();

			    for(String id:liste){
			        table.put(id,((DeclarationContext)_localctx).typi.type);
			    }

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypiContext extends ParserRuleContext {
		public Type type;
		public Token INT;
		public TypiContext typi;
		public TerminalNode INT() { return getToken(PascalParser.INT, 0); }
		public List<TypiContext> typi() {
			return getRuleContexts(TypiContext.class);
		}
		public TypiContext typi(int i) {
			return getRuleContext(TypiContext.class,i);
		}
		public TypiContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typi; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PascalListener ) ((PascalListener)listener).enterTypi(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PascalListener ) ((PascalListener)listener).exitTypi(this);
		}
	}

	public final TypiContext typi() throws RecognitionException {
		TypiContext _localctx = new TypiContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_typi);
		int _la;
		try {
			setState(76);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__6:
				enterOuterAlt(_localctx, 1);
				{
				setState(52);
				match(T__6);
				((TypiContext)_localctx).type = new Entier();
				}
				break;
			case T__7:
				enterOuterAlt(_localctx, 2);
				{
				setState(54);
				match(T__7);
				setState(55);
				match(T__8);
				setState(56);
				((TypiContext)_localctx).INT = match(INT);
				setState(57);
				match(T__9);
				setState(58);
				match(T__10);
				setState(59);
				((TypiContext)_localctx).typi = typi();

				    ((TypiContext)_localctx).type = new Tab((((TypiContext)_localctx).INT!=null?Integer.valueOf(((TypiContext)_localctx).INT.getText()):0),((TypiContext)_localctx).typi.type);

				}
				break;
			case T__11:
				enterOuterAlt(_localctx, 3);
				{
				setState(62);
				match(T__11);
				((TypiContext)_localctx).type =  new Boolean();
				}
				break;
			case T__12:
				enterOuterAlt(_localctx, 4);
				{
				setState(64);
				match(T__12);
				setState(65);
				typi();

				setState(71);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__2) {
					{
					{
					setState(67);
					match(T__2);
					setState(68);
					typi();
					}
					}
					setState(73);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(74);
				match(T__13);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstructionsContext extends ParserRuleContext {
		public List<InstructionContext> instruction() {
			return getRuleContexts(InstructionContext.class);
		}
		public InstructionContext instruction(int i) {
			return getRuleContext(InstructionContext.class,i);
		}
		public InstructionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instructions; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PascalListener ) ((PascalListener)listener).enterInstructions(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PascalListener ) ((PascalListener)listener).exitInstructions(this);
		}
	}

	public final InstructionsContext instructions() throws RecognitionException {
		InstructionsContext _localctx = new InstructionsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_instructions);
		try {
			int _alt;
			setState(99);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__14:
			case T__17:
			case T__19:
			case T__22:
			case T__24:
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(83);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(78);
						instruction();
						setState(79);
						match(T__2);
						}
						} 
					}
					setState(85);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
				}
				setState(86);
				instruction();
				}
				break;
			case T__0:
				enterOuterAlt(_localctx, 2);
				{
				setState(87);
				match(T__0);
				setState(93);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(88);
						instruction();
						setState(89);
						match(T__2);
						}
						} 
					}
					setState(95);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
				}
				setState(96);
				instruction();
				setState(97);
				match(T__13);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstructionContext extends ParserRuleContext {
		public Type type;
		public VariableContext variable;
		public ExpressionContext expression;
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public List<InstructionsContext> instructions() {
			return getRuleContexts(InstructionsContext.class);
		}
		public InstructionsContext instructions(int i) {
			return getRuleContext(InstructionsContext.class,i);
		}
		public TerminalNode ID() { return getToken(PascalParser.ID, 0); }
		public InstructionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instruction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PascalListener ) ((PascalListener)listener).enterInstruction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PascalListener ) ((PascalListener)listener).exitInstruction(this);
		}
	}

	public final InstructionContext instruction() throws RecognitionException {
		InstructionContext _localctx = new InstructionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_instruction);
		try {
			setState(160);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__14:
				enterOuterAlt(_localctx, 1);
				{
				setState(101);
				match(T__14);
				setState(102);
				match(T__15);
				setState(103);
				((InstructionContext)_localctx).variable = variable();
				setState(104);
				match(T__16);

				        ((InstructionContext)_localctx).type = ((InstructionContext)_localctx).variable.type;
				        pcode.add(new Instruction.INN());
				        pcode.add(new Instruction.STO());
				    
				}
				break;
			case T__17:
				enterOuterAlt(_localctx, 2);
				{
				setState(107);
				match(T__17);
				setState(108);
				match(T__15);
				setState(109);
				((InstructionContext)_localctx).expression = expression();
				setState(110);
				match(T__16);

				        ((InstructionContext)_localctx).type = ((InstructionContext)_localctx).expression.type;
				        pcode.add(new Instruction.PRN());
				    
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 3);
				{
				setState(113);
				variable();
				setState(114);
				match(T__18);
				setState(115);
				expression();

				            pcode.add(new Instruction.STO());
				        
				}
				break;
			case T__19:
				enterOuterAlt(_localctx, 4);
				{
				setState(118);
				match(T__19);
				setState(119);
				expression();

				            int ligneBZE=pcode.size();
				            pcode.add(new Instruction.BZE(0));
				        
				setState(121);
				match(T__20);
				setState(122);
				instructions();

				            Instruction.BZE bze=(Instruction.BZE) pcode.get(ligneBZE);
				            bze.setParam(pcode.size());
				        
				setState(129);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
				case 1:
					{

					            int ligneBRN=pcode.size();
					            pcode.add(new Instruction.BRN(0));
					            bze.setParam(pcode.size());
					        
					setState(125);
					match(T__21);
					setState(126);
					instructions();

					            Instruction.BRN brn=(Instruction.BRN) pcode.get(ligneBRN);
					            brn.setParam(pcode.size());

					        
					}
					break;
				}
				}
				break;
			case T__22:
				enterOuterAlt(_localctx, 5);
				{
				int ligneBRN=pcode.size();
				setState(132);
				match(T__22);
				setState(133);
				expression();
				setState(134);
				match(T__23);

				        int ligneBZE=pcode.size();
				        pcode.add(new Instruction.BZE(0));
				     
				setState(136);
				instructions();

				        pcode.add(new Instruction.BRN(ligneBRN));
				        Instruction.BZE bze=(Instruction.BZE) pcode.get(ligneBZE);
				        bze.setParam(pcode.size());
				     
				}
				break;
			case T__24:
				enterOuterAlt(_localctx, 6);
				{
				int ligneBRN=pcode.size();
				setState(140);
				match(T__24);
				setState(141);
				match(ID);
				setState(142);
				match(T__18);
				setState(143);
				expression();
				setState(158);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__25:
					{
					{
					setState(144);
					match(T__25);
					setState(145);
					expression();

					                int ligneBZE=pcode.size();
					                pcode.add(new Instruction.BZE(0));
					            
					setState(147);
					match(T__23);
					setState(148);
					instructions();

					                pcode.add(new Instruction.BRN(ligneBRN));
					                Instruction.BZE bze=(Instruction.BZE) pcode.get(ligneBZE);
					                bze.setParam(pcode.size());
					            
					}
					}
					break;
				case T__26:
					{
					{
					setState(151);
					match(T__26);
					setState(152);
					expression();

					                int ligneBZE=pcode.size();
					                pcode.add(new Instruction.BZE(0));
					            
					setState(154);
					match(T__23);
					setState(155);
					instructions();

					                pcode.add(new Instruction.BRN(ligneBRN));
					                Instruction.BZE bze=(Instruction.BZE) pcode.get(ligneBZE);
					                bze.setParam(pcode.size());
					            
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SimpleexpressionContext extends ParserRuleContext {
		public Type type;
		public TermContext term;
		public List<TermContext> term() {
			return getRuleContexts(TermContext.class);
		}
		public TermContext term(int i) {
			return getRuleContext(TermContext.class,i);
		}
		public SimpleexpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simpleexpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PascalListener ) ((PascalListener)listener).enterSimpleexpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PascalListener ) ((PascalListener)listener).exitSimpleexpression(this);
		}
	}

	public final SimpleexpressionContext simpleexpression() throws RecognitionException {
		SimpleexpressionContext _localctx = new SimpleexpressionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_simpleexpression);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(169);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__27:
				{
				setState(162);
				match(T__27);
				setState(163);
				((SimpleexpressionContext)_localctx).term = term();

				        ((SimpleexpressionContext)_localctx).type = ((SimpleexpressionContext)_localctx).term.type;
				        pcode.add(new Instruction.LDI(-1));
				        pcode.add(new Instruction.MUL());
				    
				}
				break;
			case T__28:
				{
				setState(166);
				match(T__28);
				setState(167);
				((SimpleexpressionContext)_localctx).term = term();
				}
				break;
			case T__15:
			case ID:
			case INT:
				{
				setState(168);
				((SimpleexpressionContext)_localctx).term = term();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(181);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__27 || _la==T__28) {
				{
				setState(179);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__28:
					{
					setState(171);
					match(T__28);
					setState(172);
					((SimpleexpressionContext)_localctx).term = term();

					        pcode.add(new Instruction.ADD());
					    
					}
					break;
				case T__27:
					{
					setState(175);
					match(T__27);
					setState(176);
					((SimpleexpressionContext)_localctx).term = term();

					            pcode.add(new Instruction.SUB());
					        
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(183);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public Type type;
		public SimpleexpressionContext simpleexpression;
		public List<SimpleexpressionContext> simpleexpression() {
			return getRuleContexts(SimpleexpressionContext.class);
		}
		public SimpleexpressionContext simpleexpression(int i) {
			return getRuleContext(SimpleexpressionContext.class,i);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PascalListener ) ((PascalListener)listener).enterExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PascalListener ) ((PascalListener)listener).exitExpression(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_expression);
		try {
			setState(222);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(184);
				((ExpressionContext)_localctx).simpleexpression = simpleexpression();
				((ExpressionContext)_localctx).type = ((ExpressionContext)_localctx).simpleexpression.type;
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(187);
				simpleexpression();
				setState(188);
				match(T__29);
				setState(189);
				simpleexpression();

				        pcode.add(new Instruction.EQL());
				    
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(192);
				simpleexpression();
				setState(193);
				match(T__30);
				setState(194);
				simpleexpression();

				        pcode.add(new Instruction.NEQ());
				    
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(197);
				simpleexpression();
				setState(198);
				match(T__31);
				setState(199);
				simpleexpression();

				        pcode.add(new Instruction.LSS());
				    
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(202);
				simpleexpression();
				setState(203);
				match(T__32);
				setState(204);
				simpleexpression();

				        pcode.add(new Instruction.GTR());
				    
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(207);
				simpleexpression();
				setState(208);
				match(T__33);
				setState(209);
				simpleexpression();

				        pcode.add(new Instruction.LEQ());
				    
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(212);
				simpleexpression();
				setState(213);
				match(T__34);
				setState(214);
				simpleexpression();

				        pcode.add(new Instruction.GEQ());
				    
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(217);
				simpleexpression();
				setState(218);
				match(T__35);
				setState(219);
				simpleexpression();


				    
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableContext extends ParserRuleContext {
		public Type type;
		public Token ID;
		public TerminalNode ID() { return getToken(PascalParser.ID, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public VariableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PascalListener ) ((PascalListener)listener).enterVariable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PascalListener ) ((PascalListener)listener).exitVariable(this);
		}
	}

	public final VariableContext variable() throws RecognitionException {
		VariableContext _localctx = new VariableContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_variable);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(224);
			((VariableContext)_localctx).ID = match(ID);
			      Data d=table.get((((VariableContext)_localctx).ID!=null?((VariableContext)_localctx).ID.getText():null));
			        Type t=d.getType();
			        ((VariableContext)_localctx).type = t;
			        pcode.add(new Instruction.LDA(d.getAdresse()));
			    
			setState(233);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__8) {
				{
				{
				setState(226);
				match(T__8);
				setState(227);
				expression();

				        t=((Tab)t).getType();
				        ((VariableContext)_localctx).type = t;
				        pcode.add(new Instruction.LDI(t.size()));
				        pcode.add(new Instruction.MUL());
				        pcode.add(new Instruction.ADD());

				    
				setState(229);
				match(T__9);
				}
				}
				setState(235);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
